Update Querent module API dependency to `gradle-plugin-api`

--- a/docs/releases/changelog/1.0.0-alpha01.md
+++ b/docs/releases/changelog/1.0.0-alpha01.md
@@ -7,4 +7,4 @@
 | Status |                           Service or Product                           |       Gradle dependency        | Latest version |
 |:------:|:----------------------------------------------------------------------:|:------------------------------:|:--------------:|
 |   🧪   | [Querent Gradle Plugin](../../../html/gradle-plugin){:target="_blank"} |       dev.teogor.querent       | 1.0.0-alpha01  |
-|   🧪   |    [Querent Gradle PLugin API](../../../html/api){:target="_blank"}    | dev.teogor.querent:querent-api | 1.0.0-alpha01  |
+|   🧪   |    [Querent Gradle Plugin API](../../../html/gradle-plugin-api){:target="_blank"}    | dev.teogor.querent:api | 1.0.0-alpha01  |
